Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-8557

Default executor should allow decreasing the escalation grace period of a terminating task

Agile BoardAttach filesAttach ScreenshotAdd voteVotersWatch issueWatchersLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    Description

      The command executor supports decreasing the escalation grace period of a terminating task.

      For consistency, this should also be supported by the default executor.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            Unassigned Unassigned
            gkleiman Gastón Kleiman

            Dates

              Created:
              Updated:

              Slack

                Issue deployment