Added a reference to MESOS-8557 to the default executor.

Review: https://reviews.apache.org/r/66235/